--- a/jemdoc.css
+++ b/jemdoc.css
@@ -25,6 +25,16 @@ body {
 	width:825px;
 }
 
+.unselectable {
+-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+cursor: default;
+}
+
 #layout-menu {
 	background: #f6f6f6;
 	border: 1px solid #dddddd;
