--- a/jemdoc.css
+++ b/jemdoc.css
@@ -9,20 +9,20 @@ table#tlayout {
 /*
 body {
 	background: white;
-	font-family: Georgia, serif;
+	font-family: Georgia, serif;Verdana, Arial, Helvetica, sans-serif
 	padding-bottom: 8px;
 	margin: 0;
 }
 */
 body {	
-	background-color:#FFFFFF;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
+	background-color:#333;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size:15px;
 	margin-bottom:0;
 	color:#333;
 	margin-left:auto;
 	margin-right:auto;
-	width:825px;
+	width:400px;
 }
 
 .unselectable {
