update br in mobile version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3897,9 +3897,9 @@
 
 			@media screen and (max-width: 980px) {
 
-				#intro p br {
+				/*#intro p br {
 					display: none;
-				}
+				}*/
 
 			}
 
