--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1687,7 +1687,7 @@
 		}
 
 	strong, b {
-		color: #ffffff;
+		color: #DCDCDC;
 		font-weight: bold;
 	}
 
@@ -2055,12 +2055,12 @@
 		border-radius: 0.25em;
 		border: solid 1px rgba(255, 255, 255, 0.15);
 		background: rgba(255, 255, 255, 0.05);
-		margin: 0 0 2em 0;
+		margin: 0 0 1em 0;
 	}
 
 		.features section {
-			padding: 3.5em 3em 1em 7em ;
-			width: 50%;
+			padding: 1em 1em 1em 1em ;
+			width: 100%;
 			border-top: solid 1px rgba(255, 255, 255, 0.15);
 			position: relative;
 		}
@@ -2261,7 +2261,7 @@
 		@media screen and (max-width: 736px) {
 
 			.features section {
-				padding: 2.5em 1.5em 0.1em 5.5em ;
+				padding: 2.5em 1.5em 0.1em 2.5em ;
 			}
 
 				.features section .icon {
