--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -413,7 +413,7 @@ body{-ms-overflow-style:scrollbar;}
 }
 body{background:#312450;}
 body.is-loading *, body.is-loading *:before, body.is-loading *:after{-moz-animation:none !important;-webkit-animation:none !important;-ms-animation:none !important;animation:none !important;-moz-transition:none !important;-webkit-transition:none !important;-ms-transition:none !important;transition:none !important;}
-body, input, select, textarea{color:rgba(255, 255, 255, 0.7);font-family:Arial, Helvetica, sans-serif;font-size:14pt;font-weight:normal;line-height:1.75;}
+body, input, select, textarea{color:rgba(255, 255, 255, 0.9);font-family:Arial, Helvetica, sans-serif;font-size:14pt;font-weight:normal;line-height:1.75;}
 @media screen and (max-width:1680px){body, input, select, textarea{font-size:13pt;}
 }
 @media screen and (max-width:1280px){body, input, select, textarea{font-size:12pt;}
@@ -808,6 +808,7 @@ body.is-ie .wrapper.fullscreen{height:auto;}
 #footer > .inner a{border-bottom-color:rgba(255, 255, 255, 0.15);}
 #footer > .inner a:hover{border-bottom-color:transparent;}
 #footer > .inner .menu{font-size:0.8em;color:rgba(255, 255, 255, 0.15);}
+#footer > .inner{padding:1em 1em 1em 1em;}
 #header + #wrapper + #footer > .inner{margin:0 auto;}
 #sidebar{padding:2.5em 2.5em 0.5em 2.5em;background:#312450;cursor:default;height:100vh;left:0;overflow-x:hidden;overflow-y:auto;position:fixed;text-align:right;top:0;width:18em;z-index:10000;}
 #sidebar > .inner{display:-moz-flex;display:-webkit-flex;display:-ms-flex;display:flex;-moz-flex-direction:column;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-moz-justify-content:center;-webkit-justify-content:center;-ms-justify-content:center;justify-content:center;-moz-transform:translateY(0);-webkit-transform:translateY(0);-ms-transform:translateY(0);transform:translateY(0);-moz-transition:opacity 1s ease;-webkit-transition:opacity 1s ease;-ms-transition:opacity 1s ease;transition:opacity 1s ease;min-height:100%;opacity:1;width:100%;}
@@ -835,11 +836,11 @@ body.is-ie #sidebar > .inner{height:100%;}
 #sidebar nav > ul > li:nth-child(18){-moz-transition-delay:3.85s;-webkit-transition-delay:3.85s;-ms-transition-delay:3.85s;transition-delay:3.85s;}
 #sidebar nav > ul > li:nth-child(19){-moz-transition-delay:4.05s;-webkit-transition-delay:4.05s;-ms-transition-delay:4.05s;transition-delay:4.05s;}
 #sidebar nav > ul > li:nth-child(20){-moz-transition-delay:4.25s;-webkit-transition-delay:4.25s;-ms-transition-delay:4.25s;transition-delay:4.25s;}
-#sidebar nav a{-moz-transition:color 0.2s ease;-webkit-transition:color 0.2s ease;-ms-transition:color 0.2s ease;transition:color 0.2s ease;border:0;color:rgba(255, 255, 255, 0.35);display:block;font-size:0.8em;font-weight:bold;letter-spacing:0.25em;line-height:1.75;outline:0;padding:1.35em 0;position:relative;text-decoration:none;text-transform:uppercase;}
+#sidebar nav a{-moz-transition:color 0.2s ease;-webkit-transition:color 0.2s ease;-ms-transition:color 0.2s ease;transition:color 0.2s ease;border:0;color:rgba(255, 255, 255, 0.8);display:block;font-size:0.95em;font-weight:bold;letter-spacing:0.25em;line-height:1.75;outline:0;padding:1.35em 0;position:relative;text-decoration:none;text-transform:uppercase;}
 #sidebar nav a:before, #sidebar nav a:after{border-radius:0.2em;bottom:0;content:'';height:0.2em;position:absolute;right:0;width:100%;}
 #sidebar nav a:before{background:#3c2c62;}
 #sidebar nav a:after{background-image:-moz-linear-gradient(to right, #5e42a6, #b74e91);background-image:-webkit-linear-gradient(to right, #5e42a6, #b74e91);background-image:-ms-linear-gradient(to right, #5e42a6, #b74e91);background-image:linear-gradient(to right, #5e42a6, #b74e91);-moz-transition:max-width 0.2s ease;-webkit-transition:max-width 0.2s ease;-ms-transition:max-width 0.2s ease;transition:max-width 0.2s ease;max-width:0;}
-#sidebar nav a:hover{color:rgba(255, 255, 255, 0.55);}
+#sidebar nav a:hover{color:rgba(255, 255, 255, 1);}
 #sidebar nav a.active{color:#ffffff;}
 #sidebar nav a.active:after{max-width:100%;}
 body.is-loading #sidebar > .inner{opacity:0;}
